# Colossus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
Engine/: CMakeLists.txt
Engine/include/: ObeliskPCH.h
Engine/include/Obelisk/: Macros.h  ObeliskAPI.h  ObeliskPCH.hpp
Engine/include/Obelisk/Components/: Transform.h
Engine/include/Obelisk/Core/: AssetManager.h  Camera.h  Time.h
Engine/include/Obelisk/Input/: InputCodes.h  Keyboard.h  Mouse.h
Engine/include/Obelisk/Logging/: Colours.h  Log.h  LogLevels.h
Engine/include/Obelisk/Renderer/: Mesh.h  Shader.h  Texture.h  Window.h
Engine/include/Obelisk/Scene/: Entity.h  Scene.h
Engine/src/: ObeliskAPI.cpp  ObeliskPCH.cpp
Engine/src/Components/: Transform.cpp
Engine/src/Core/: AssetManager.cpp  Camera.cpp  Time.cpp
Engine/src/Input/: Keyboard.cpp  Mouse.cpp
Engine/src/Renderer/: Mesh.cpp  Shader.cpp  Texture.cpp  Window.cpp
Engine/src/Scene/: Entity.cpp
GameClient/: CMakeLists.txt
GameClient/src/: main.cpp
assets/shaders/: basic.frag  basic.vert  default.frag  default.vert
engine/: CMakeLists.txt
engine/include/: cspch.h
engine/include/Colossus/: Engine.h  Transform.h
engine/include/Colossus/Input/: InputCodes.h  Keyboard.h
engine/include/Colossus/Objects/: Entity.h
engine/include/Colossus/Render/: Mesh.h  Renderer.h  RendererFactory.h  RendererInterface.h  Window.h
engine/include/Colossus/Render/Arch/OpenGL/: OpenGLRenderer.h  Shader.h  Texture.h
engine/include/Colossus/Render/Renderers/: OpenGLRenderer.h
engine/include/Colossus/Rendering/: RendererFactory.h
engine/include/Colossus/Rendering/Renderers/: OpenGLRenderer.h
engine/include/Colossus/System/: Window.h
engine/include/Colossus/System/Logging/: Colors.h  Log.h
engine/include/colossus/: Engine.h
engine/include/colossus/rendering/: RendererFactory.h  RendererInterface.h
engine/include/colossus/rendering/renderers/: OpenGLRenderer.h
engine/src/Colossus/: Engine.cpp  Transform.cpp
engine/src/Colossus/Input/: Keyboard.cpp
engine/src/Colossus/Render/: Mesh.cpp  Renderer.cpp  RendererFactory.cpp  Window.cpp
engine/src/Colossus/Render/Arch/OpenGL/: OpenGLRenderer.cpp  Shader.cpp  Texture.cpp
engine/src/Colossus/Render/Renderers/: OpenGLRenderer.cpp
engine/src/Colossus/Rendering/: RendererFactory.cpp
engine/src/Colossus/Rendering/Renderers/: OpenGLRenderer.cpp
engine/src/Colossus/System/: Window.cpp
engine/src/colossus/: Engine.cpp
engine/src/colossus/input/: Keyboard.cpp
engine/src/colossus/rendering/: RendererFactory.cpp
engine/src/colossus/rendering/renderers/: OpenGLRenderer.cpp
engine/src/colossus/system/: Window.cpp
game/: CMakeLists.txt
game/include/Game/: GameLogic.h
game/include/game/: GameLogic.h
game/src/: Main.cpp
game/src/Game/: GameLogic.cpp
game/src/game/: GameLogic.cpp
